--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zomato - order food online</title>
 
-    <link rel="icon" href="logo2.png" type="image/png">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="logo2.png" type="png">
+    <link rel="stylesheet" href="style.css">
 </head>
 <!-- Login Modal -->
 <div class="modal-overlay" id="loginModal">
@@ -123,5 +123,6 @@
     </footer>
     <script src="js/script.js"></script>
 </body>
+
 
 </html>
