--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Zomato - order food online</title>
 
     <link rel="icon" href="logo2.png" type="png">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <!-- Login Modal -->
 <div class="modal-overlay" id="loginModal">
@@ -126,3 +126,4 @@
 
 
 </html>
+
