--- a/html/add-restaurant.html
+++ b/html/add-restaurant.html
@@ -7,7 +7,7 @@
     
 
     <!-- reuse same CSS -->
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -61,3 +61,4 @@
     </main>
 </body>
 </html>
+
