--- a/html/investor.html
+++ b/html/investor.html
@@ -11,7 +11,7 @@
 
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="../CSS/style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="ir-page">
@@ -75,4 +75,5 @@
             </div>
 
             <div class="ir-item">
+
                 <span>📝 Earnings
