--- a/html/investor.html
+++ b/html/investor.html
@@ -11,7 +11,7 @@
 
 
     <!-- Main CSS -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="ir-page">
@@ -77,3 +77,4 @@
             <div class="ir-item">
 
                 <span>📝 Earnings
+
